fix : Size chart modal alignment fix

--- a/src/index.css
+++ b/src/index.css
@@ -375,7 +375,7 @@
 
 .size-modal {
   @apply h-screen w-screen flex justify-center items-center;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   z-index: 1000;
